--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-file-icons",
   "version": "1.4.0",
-  "description": "A Chrome Extension which gives different filetypes different icons to GitHub, GitLab, gitea and gogs.",
+  "description": "A Firefox Add-On which gives different filetypes different icons to GitHub, Gitlab, gitea and gogs.",
   "license": "MIT",
   "author": "homerchen19",
   "homepage": "https://github.com/homerchen19/github-file-icons#readme",
@@ -19,7 +19,7 @@
     "lint:fix": "npm run lint -- --fix",
     "start": "cross-env NODE_ENV=development webpack --config ./webpack.config.js --watch",
     "update-assets": "node scripts/update-assets.mjs",
-    "zip": "npm run build && zip -r build/File_Icon_For_GitHub_And_GitLab_$npm_package_version.zip build"
+    "zip": "npm run build && web-ext build -s build/"
   },
   "dependencies": {
     "dom-loaded": "^3.0.0",
@@ -54,6 +54,7 @@
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.3",
+    "web-ext": "^7.1.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-ext-reloader": "^1.1.9",
